# xdg-tui

./: Cargo.toml  LICENSE  README.md
src/: app.rs  desktop_entries.rs  main.rs  mime.rs  ui.rs  xdg_base.rs
