[package]
name = "xdg-tui"
version = "0.1.0"
edition = "2021"
authors = ["xdg-tui contributors"]
description = "A TUI for displaying and managing XDG settings on Linux"
license = "MIT"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
anyhow = "1.0"
dirs = "5.0"
walkdir = "2.5"
freedesktop-desktop-entry = "0.6"
mime_guess = "2.0"

[profile.release]
opt-level = 3
lto = true
strip = true
